--- a/com.goibibo/test-output/old/Suite/methods.html
+++ b/com.goibibo/test-output/old/Suite/methods.html
@@ -1,26 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67f089">  <td>24/01/08 11:15:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.configPages()[pri:0, instance:allTest.HotelsTest@1ff4931d]">&gt;&gt;configPages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@278240974</td>   <td></td> </tr>
-<tr bgcolor="67f089">  <td>24/01/08 11:16:23</td>   <td>57624</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:allTest.HotelsTest@1ff4931d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@278240974</td>   <td></td> </tr>
-<tr bgcolor="6e8f8e">  <td>24/01/08 11:15:36</td>   <td>11085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.navigateToHotelsPage()[pri:0, instance:allTest.HotelsTest@1ff4931d, attributes: <name: passMessage, value:[User is redirected to Hotels web page]>]">navigateToHotelsPage</td> 
-  <td>TestNG-tests-1@278240974</td>   <td></td> </tr>
-<tr bgcolor="67f089">  <td>24/01/08 11:15:25</td>   <td>2</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.configPages()[pri:0, instance:allTest.LoginTest@757277dc]">&gt;&gt;configPages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@888655833</td>   <td></td> </tr>
-<tr bgcolor="67f089">  <td>24/01/08 11:16:39</td>   <td>73607</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:allTest.LoginTest@757277dc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@888655833</td>   <td></td> </tr>
-<tr bgcolor="b7cd72">  <td>24/01/08 11:16:22</td>   <td>57003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidSignIn(java.lang.String)[pri:0, instance:allTest.LoginTest@757277dc, attributes: <name: passMessage, value:[Proper error messaged is displayed successfully]>]">invalidSignIn</td> 
-  <td>TestNG-tests-2@888655833</td>   <td></td> </tr>
-<tr bgcolor="b7cd72">  <td>24/01/08 11:16:22</td>   <td>57003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidSignIn(java.lang.String)[pri:0, instance:allTest.LoginTest@757277dc, attributes: <name: passMessage, value:[Proper error messaged is displayed successfully]>]">invalidSignIn</td> 
-  <td>TestNG-tests-2@888655833</td>   <td></td> </tr>
-<tr bgcolor="67f089">  <td>24/01/08 11:15:25</td>   <td>-1</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.configPages()[pri:0, instance:allTest.FlightTest@6f45df59]">&gt;&gt;configPages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1504642150</td>   <td></td> </tr>
-<tr bgcolor="67f089">  <td>24/01/08 11:15:25</td>   <td>-48</td> <td title="&gt;&gt;BaseClass.configurations()[pri:0, instance:allTest.FlightTest@6f45df59]">&gt;&gt;configurations</td> 
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.verifySearchCriteria()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The details displayed in the hotel results page matches with the details used to search the hotels]>]">verifySearchCriteria</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="67f089">  <td>24/01/15 16:22:57</td>   <td>-45927</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.configPages()[pri:0, instance:allTest.HotelsTest@710f4dc7]">&gt;&gt;configPages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:47</td>   <td>4295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.verifySortingOptions(java.lang.String)[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The hotels displayed are sorted correctly]>]">verifySortingOptions</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:12</td>   <td>-31470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.verify0RoomAdd()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The alert is displayed and 'Minimum 1 is required' message is displayed]>]">verify0RoomAdd</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:47</td>   <td>4295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.verifySortingOptions(java.lang.String)[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The hotels displayed are sorted correctly]>]">verifySortingOptions</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:09</td>   <td>-34047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.validationOfDateFields()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The calender box appears and the selected 'Check In' and 'Check Out' dates is displayed in the respective fields]>]">validationOfDateFields</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:07</td>   <td>-36231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.validationOfRadioButtons()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[India radio button is selected]>]">validationOfRadioButtons</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:04</td>   <td>-39311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.navigateToHotelsPage()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[User is redirected to Hotels web page]>]">navigateToHotelsPage</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:49</td>   <td>6237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.verifyPriceFilter()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The hotel results shows the hotels having amount between 2001 and 4000]>]">verifyPriceFilter</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:08</td>   <td>-35195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.validationOfWhereSearchfield()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[A dropdown is displayed showing locations in Goa and the chosen location is displayed in the 'Where' field]>]">validationOfWhereSearchfield</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:11</td>   <td>-32347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.validationOfChildrenField()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The dropdown menu appears and the selected number of children is added and the age is able to gets selected for each of them]>]">validationOfChildrenField</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:13</td>   <td>-30259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.validationOfSearchField()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[User is redirected to hotels list webpage]>]">validationOfSearchField</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:47</td>   <td>4295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.verifySortingOptions(java.lang.String)[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The hotels displayed are sorted correctly]>]">verifySortingOptions</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:10</td>   <td>-33417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.validationOfAdultsField()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The dropdown menu appears and the selected number of adults is displayed in the field]>]">validationOfAdultsField</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:12</td>   <td>-30922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.verify0AdultAdd()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The alert is displayed and 'Minimum 1 adult is required' message is displayed]>]">verify0AdultAdd</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="6e8f8e">  <td>24/01/15 16:23:10</td>   <td>-32919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelsTest.validationOfRoomsField()[pri:0, instance:allTest.HotelsTest@710f4dc7, attributes: <name: passMessage, value:[The dropdown menu appears and the selected number of rooms is displayed in the field]>]">validationOfRoomsField</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/01/15 16:24:28</td>   <td>44960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidSignIn(java.lang.String)[pri:0, instance:allTest.LoginTest@5c671d7f, attributes: <name: passMessage, value:[Proper error messaged is displayed successfully]>]">invalidSignIn</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="67f089">  <td>24/01/15 16:24:22</td>   <td>38893</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.configPages()[pri:0, instance:allTest.LoginTest@5c671d7f]">&gt;&gt;configPages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/01/15 16:24:28</td>   <td>44960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidSignIn(java.lang.String)[pri:0, instance:allTest.LoginTest@5c671d7f, attributes: <name: passMessage, value:[Proper error messaged is displayed successfully]>]">invalidSignIn</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="977460">  <td>24/01/15 16:24:29</td>   <td>45635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.signIn()[pri:0, instance:allTest.LoginTest@5c671d7f, attributes: <name: passMessage, value:[User is logged in successfully]>]">signIn</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="67f089">  <td>24/01/15 16:24:33</td>   <td>50020</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.configPages()[pri:0, instance:allTest.FlightTest@58ea606c]">&gt;&gt;configPages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>24/01/15 16:24:39</td>   <td>55579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightTest.navigateToFLightsPage()[pri:0, instance:allTest.FlightTest@58ea606c, attributes: <name: passMessage, value:[User is redirected to flight booking page]>]">navigateToFLightsPage</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="67f089">  <td>24/01/15 16:22:57</td>   <td>-45948</td> <td title="&gt;&gt;BaseClass.configurations()[pri:0, instance:allTest.FlightTest@58ea606c]">&gt;&gt;configurations</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="67f089">  <td>24/01/08 11:16:22</td>   <td>57341</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:allTest.FlightTest@6f45df59]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1504642150</td>   <td></td> </tr>
-<tr bgcolor="a487af">  <td>24/01/08 11:15:36</td>   <td>11085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightTest.navigateToFLightsPage()[pri:0, instance:allTest.FlightTest@6f45df59, attributes: <name: passMessage, value:[User is redirected to flight booking page]>]">navigateToFLightsPage</td> 
-  <td>TestNG-tests-3@1504642150</td>   <td></td> </tr>
 </table>
