--- a/com.goibibo/test-output/old/Suite/toc.html
+++ b/com.goibibo/test-output/old/Suite/toc.html
@@ -20,25 +20,25 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Test1 (11/3/13)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Test1 (27/0/0)</td><td valign='top' align='right'>
   <a href='Test1.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Test2 (2/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Test2 (3/0/0)</td><td valign='top' align='right'>
   <a href='Test2.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Test3 (0/1/17)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Test3 (18/0/0)</td><td valign='top' align='right'>
   <a href='Test3.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
